tests/rosetta/out/Erlang/cusip.error
type error: error[T003]: unknown function: indexOf
  --> /workspace/mochi/tests/rosetta/x/Mochi/cusip.mochi:4:13

  4 |   var idx = indexOf(upper, ch)
    |             ^

help:
  Ensure the function is defined before it's called.